2008-09-06  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* process.c (Fsystem_process_attributes): Doc fix.

2008-09-06  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (Ftop_level): Doc fix.

2008-09-06  Eli Zaretskii  <eliz@gnu.org>

	* xmenu.c (xmenu_show) [!HAVE_X_WINDOWS]: If frame has a
	minibuffer, don't let lower part of menu invade the echo area.

	* msdos.c (IT_menu_display): Use STRING_CHAR_ADVANCE instead of a
	"char *q" to access menu text and advance through it.  Revert the
	change that displayed ">" instead of ASCII character 0x10.

2008-09-05  Eli Zaretskii  <eliz@gnu.org>

	* menu.c (single_menu_item) [!HAVE_BOXES]: Enable emulation of
	toggle boxes and radio buttons on MS-DOS as well.

2008-09-05  Kenichi Handa  <handa@m17n.org>

	* composite.c (autocmp_chars): Check lookback count.
	(composition_compute_stop_pos): Set cmp_it->lookback.
	(composition_reseat_it): Check lookback count.
	(struct position_record): New struct.
	(FORWARD_CHAR, BACKWARD_CHAR, CHAR_COMPOSABLE_P): New macros.
	(find_automatic_composition): New function.
	(composition_adjust_point): Use find_automatic_composition.

	* dispextern.h (struct composition_it): New member lookback.

2008-09-02  Chong Yidong  <cyd@stupidchicken.com>

	* indent.c (Fvertical_motion): Don't call move_it_by_lines again
	if moving by a single line.

2008-09-02  Andreas Schwab  <schwab@suse.de>

	* xterm.c (x_delete_display): Fix merge error.

	* fileio.c (Fexpand_file_name): Remove unused variables.

2008-09-02  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Fexpand_file_name): Copy argument `name' into local
	storage on all platforms, not just on DOS_NT.

2008-09-02  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (Fx_popup_menu, Fx_popup_dialog, w32_menu_show): Ensure
	mouse is not grabbed after menu is finished.

2008-09-01  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Finternal_set_alternative_font_family_alist)
	(Finternal_set_alternative_font_registry_alist): Properly copy